[workspace]
members = ["resplice-macro"]
resolver = "2"

[package]
authors = ["Tyler Cook"]
description = "Rewrite it in Rust"
edition = "2024"
license = "Unlicense"
name = "resplice"
readme = "README.md"
repository = "https://github.com/fossable/resplice"
rust-version = "1.85"
version = "0.0.1"

[dependencies]
resplice-macro = { version = "0.0.1", path = "resplice-macro" }
object = "0.36"
goblin = "0.8"
inventory = "0.3"
anyhow = "1.0"
